fix: Dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ header label {
   justify-content: start;
 
   width: 100%;
-  height: 80px;
+  height: 120px;
   padding: 0px 15px;
 }
 
@@ -617,7 +617,7 @@ section {
   display: flex;
   align-items: center;
   padding: 10px 20px 10px 20px;
-  gap: 15px
+  gap: 15px;
 }
 
 .card-img {
